<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginVertical="16dp"
    android:theme="@style/CreateAccountTheme"
    android:layout_marginHorizontal="32dp"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <ImageView
        android:id="@+id/icon"
        android:layout_centerHorizontal="true"
        android:src="@drawable/sign_up"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_width="130dp"
        android:layout_height="130dp">
    </ImageView>

    <LinearLayout
        android:id="@+id/customMessage"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/icon"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="left"
            android:id="@+id/developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/regurlar"
            android:text="@string/message"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="25sp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/singInOption"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/customMessage"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/black"
            android:hint="@string/enterEmail"
            android:background="@drawable/login_back"
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:fontFamily="@font/regurlar"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="65dp">
        </EditText>

        <EditText
            android:textColorHint="@color/black"
            android:hint="@string/enterPassword"
            android:background="@drawable/login_back"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:fontFamily="@font/regurlar"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="65dp">
        </EditText>

        <EditText
            android:textColorHint="@color/black"
            android:paddingLeft="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/confirmPassword"
            android:background="@drawable/login_back"
            android:inputType="textPassword"
            android:id="@+id/confirmPassword"
            android:fontFamily="@font/regurlar"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="65dp">
        </EditText>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:id="@+id/createAccount"
        android:background="@drawable/login_back"
        android:text="@string/createAccount"
        android:layout_below="@+id/singInOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.google.android.material.button.MaterialButton>

    <ProgressBar
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/createAccount"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ProgressBar>

    <LinearLayout
        android:gravity="center"
        android:layout_below="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:padding="10dp"
            android:id="@+id/alreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roman"
            android:text="@string/notAccountYet"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="17sp">
        </TextView>

        <TextView
            android:textStyle="bold"
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roman"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="17sp">
        </TextView>

    </LinearLayout>
</RelativeLayout>