<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteTaking">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/parentHead"
            android:text="@string/addNote"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <ImageView
            android:id="@+id/saveNote"
            android:src="@drawable/save_note"
            android:layout_alignParentRight="true"
            android:layout_width="40dp"
            android:layout_height="40dp">
        </ImageView>

    </RelativeLayout>

    <LinearLayout
        android:layout_marginVertical="20dp"
        android:orientation="vertical"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:padding="12dp"
            android:layout_marginVertical="8dp"
            android:textColorHint="@color/black"
            android:hint="@string/hint"
            android:id="@+id/subHead"
            android:fontFamily="@font/regurlar"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <EditText
            android:gravity="top"
            android:minLines="15"
            android:padding="12dp"
            android:layout_marginVertical="8dp"
            android:textColorHint="@color/black"
            android:hint="@string/note"
            android:id="@+id/message"
            android:fontFamily="@font/regurlar"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:id="@+id/delete"
        android:text="@string/delete"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>


</RelativeLayout>